--- a/model.ipynb
+++ b/model.ipynb
@@ -20,7 +20,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def loadimage(folder, label, image_size=(150, 150)):\n",
+    "    images = []\n",
+    "    labels = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        img_path = os.path.join(folder, filename)\n",
+    "        try:\n",
+    "            img = Image.open(img_path).resize(image_size) \n",
+    "            img = np.array(img) / 255.0 \n",
+    "            if img.shape == (image_size[0], image_size[1], 3): \n",
+    "                images.append(img)\n",
+    "                labels.append(label)\n",
+    "        except Exception as e:\n",
+    "            print(f\"error\")\n",
+    "    return np.array(images), np.array(labels)\n",
+    "\n",
+    "catimage, catlabel= loadimage('kagglecatsanddogs_3367a/PetImages/Cat', label=0)\n",
+    "dogimage, doglabel = loadimage('kagglecatsanddogs_3367a/PetImages/Dog', label=1)\n",
+    "\n",
+    "X = np.concatenate((catimage, dogimage), axis=0)\n",
+    "y = np.concatenate((catlabel, doglabel), axis=0)\n",
+    "\n",
+    "indices = np.arange(X.shape[0])\n",
+    "np.random.shuffle(indices)\n",
+    "X = X[indices]\n",
+    "y = y[indices]\n",
+    "\n",
+    "Xtrain, Xtest, Ytrain, Ytest = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "    Conv2D(32, (3, 3), activation='relu', input_shape=(150, 150, 3)),\n",
+    "    MaxPooling2D(2, 2),\n",
+    "    \n",
+    "    Conv2D(64, (3, 3), activation='relu'),\n",
+    "    MaxPooling2D(2, 2),\n",
+    "    \n",
+    "    Conv2D(128, (3, 3), activation='relu'),\n",
+    "    MaxPooling2D(2, 2),\n",
+    "    \n",
+    "    Flatten(),\n",
+    "    Dense(512, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
+   ]
   }
  ],
  "metadata": {
